kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: music-catalog

spec:
  ingressClassName: nginx

  rules:
    - host: music-catalog.local

      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  name: http

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
